--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <!-- ICONO -->
-    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="./img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/icono.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./img/icono.ico" type="image/x-icon" />
     <!-- TITLE -->
     <title>Gilmar Cleaning</title>
     <!-- DESCRIPTION -->
@@ -107,7 +107,7 @@
                         <input class="color-white bg-primary btn-send" type="submit" value="SEND" />
                         <p class="color-white">or</p>
                         <a class="color-white bg-green"
-                            href="https://api.whatsapp.com/send?phone=+447868650131&text=Hello, I would like to contract your services!"
+                            href="https://api.whatsapp.com/send?phone=+447532683403&text=Hello, I would like to contract your services!"
                             target="_blank">WHATSAPP</a>
                     </div>
                     <div class="loader hidden"></div>
@@ -234,7 +234,7 @@
                     <a class="color-white bg-secondary" href="#contact">EMAIL</a>
                     <p>or</p>
                     <a class="color-white bg-green"
-                        href="https://api.whatsapp.com/send?phone=+447868650131&text=Hello, I would like to contract your services!"
+                        href="https://api.whatsapp.com/send?phone=+447532683403&text=Hello, I would like to contract your services!"
                         target="_blank">WHATSAPP</a>
                 </div>
             </article>
