--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
             <article class="section-article">
                 <h2 class="article-title color-white">Send Us An Email</h2>
                 <form class="form-email">
-                    <input type="text" name="name" id="name" placeholder="Jon Doe" minlength="3" required />
+                    <input type="text" name="name" id="name" placeholder="Jon Doe" minlength="3" required value="julano"/>
                     <input type="email" name="email" id="email" placeholder="example@gmail.com" minlength="5"
-                        required />
-                    <input type="tel" name="phone" id="phone" placeholder="your phone number" minlength="5" required />
+                        required value="julano@gmail.com"/>
+                    <input type="tel" name="phone" id="phone" placeholder="your phone number" minlength="5" required value="04169780133"/>
                     <div class="form-radios">
                         <label for="radio-residential">
-                            <input type="radio" name="radio" id="radio-residential" value="Residential Cleaning" />
+                            <input type="radio" name="radio" id="radio-residential" value="Residential Cleaning" checked/>
                             Residential Cleaning
                         </label>
                         <label for="radio-commercial">
@@ -100,9 +100,8 @@
                             Commercial Cleaning
                         </label>
                     </div>
-                    <textarea name="address" id="address" cols="5" rows="3" placeholder="Address"></textarea>
-                    <textarea name="message" id="message" cols="5" rows="5" placeholder="Message"
-                        class="asd"></textarea>
+                    <textarea name="address" id="address" cols="5" rows="3" placeholder="Address">asdasdasdasdasdasdasd</textarea>
+                    <textarea name="message" id="message" cols="5" rows="5" placeholder="Message" >asdasdasdad</textarea>
                     <div class="form-content-buttons contact-buttons">
                         <input class="color-white bg-primary btn-send" type="submit" value="SEND" />
                         <p class="color-white">or</p>
