--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </figcaption>
         </figure>
         <picture class="bg-image">
-            <!-- <source srcset="./img/section_header.webp" type="image/webp"> -->
+            <source srcset="./img/bg_header.webp" type="image/webp">
             <img src="./img/bg_header.jpg" alt="header" />
         </picture>
     </header>
@@ -86,10 +86,10 @@
             <article class="section-article">
                 <h2 class="article-title color-white">Send Us An Email</h2>
                 <form class="form-email">
-                    <input type="text" name="name" id="name" placeholder="Jon Doe" minlength="3" required value="julano"/>
+                    <input type="text" name="name" id="name" placeholder="Jon Doe" minlength="3" required/>
                     <input type="email" name="email" id="email" placeholder="example@gmail.com" minlength="5"
-                        required value="julano@gmail.com"/>
-                    <input type="tel" name="phone" id="phone" placeholder="your phone number" minlength="5" required value="04169780133"/>
+                        required/>
+                    <input type="tel" name="phone" id="phone" placeholder="your phone number" minlength="5" required/>
                     <div class="form-radios">
                         <label for="radio-residential">
                             <input type="radio" name="radio" id="radio-residential" value="Residential Cleaning" checked/>
@@ -100,8 +100,8 @@
                             Commercial Cleaning
                         </label>
                     </div>
-                    <textarea name="address" id="address" cols="5" rows="3" placeholder="Address">asdasdasdasdasdasdasd</textarea>
-                    <textarea name="message" id="message" cols="5" rows="5" placeholder="Message" >asdasdasdad</textarea>
+                    <textarea name="address" id="address" cols="5" rows="3" placeholder="Address"></textarea>
+                    <textarea name="message" id="message" cols="5" rows="5" placeholder="Message" ></textarea>
                     <div class="form-content-buttons contact-buttons">
                         <input class="color-white bg-primary btn-send" type="submit" value="SEND" />
                         <p class="color-white">or</p>
@@ -113,7 +113,7 @@
                 </form>
             </article>
             <picture class="bg-image">
-                <!-- <source srcset="./img/section_contact.webp" type="image/webp" /> -->
+                <source srcset="./img/bg_contact.webp" type="image/webp" />
                 <img src="./img/bg_contact.jpg" alt="contact" />
             </picture>
         </section>
@@ -136,7 +136,7 @@
                 <div class="content-images content-images-services">
                     <figure>
                         <picture>
-                            <!-- <source type="image/webp" srcset="./img/residential_cleaning.webp" /> -->
+                            <source type="image/webp" srcset="./img/bg_residential-cleaning.webp" />
                             <img src="./img/bg_residential-cleaning.jpg" alt="Residential Cleaning" loading="lazy" />
                         </picture>
                         <figcaption>
@@ -145,7 +145,7 @@
                     </figure>
                     <figure>
                         <picture>
-                            <!-- <source type="image/webp" srcset="./img/commercial_cleaning.webp" /> -->
+                            <source type="image/webp" srcset="./img/bg_commercial-cleaning.webp" />
                             <img src="./img/bg_commercial-cleaning.jpg" alt="Commecial Cleaning" loading="lazy" />
                         </picture>
                         <figcaption>
@@ -154,7 +154,7 @@
                     </figure>
                     <figure>
                         <picture>
-                            <!-- <source type="image/webp" srcset="./img/customized_cleaning.webp" /> -->
+                            <source type="image/webp" srcset="./img/bg_customized-cleaning.webp" />
                             <img src="./img/bg_customized-cleaning.jpg" alt="Customized Cleaning" loading="lazy" />
                         </picture>
                         <figcaption>
@@ -246,7 +246,7 @@
                 <div class="content-images">
                     <figure>
                         <picture>
-                            <!-- <source type="image/webp" srcset="./img/areas_leicester.webp" /> -->
+                            <source type="image/webp" srcset="./img/leicester.webp" />
                             <img src="./img/leicester.jpg" alt="Leicester" loading="lazy" />
                         </picture>
                         <figcaption>
@@ -255,7 +255,7 @@
                     </figure>
                     <figure>
                         <picture>
-                            <!-- <source type="image/webp" srcset="./img/areas_manchester.webp" /> -->
+                            <source type="image/webp" srcset="./img/manchester.webp" />
                             <img src="./img/manchester.jpg" alt="Manchester" loading="lazy" />
                         </picture>
                         <figcaption>
